second commit: small changes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
             <h2>Servant fièrement</h2>
             <h1>Des Délicieux repas tous les jours</h1>
             <p>Commandez un plat et Faite vous livrés chez vous</p>
-            <a href="#" class="btn">Commonder!</a>
+            <div class="btns">
+                <a href="#" class="btn">Faire une commander?</a>
+                <a href="#" class="btn">Créer votre propre plat!</a>
+            </div>
         </div>
     </section>
 
@@ -75,7 +78,7 @@
 
 <footer>
     <div class="contain">
-        <a href="#">En propos de MyResto</a>
+        <a href="#">A propos de MyResto</a>
         <p>&copy; 2020 MyResto. Tous droits réservés.</p>
     </div>
 </footer>
