--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a href="index.html" class="logo">
                     <i class="icon ion-md-restaurant"></i>
                 </a>
+                <span class="small">MyResto</span>
                 <ul class="nav-list">
                     <li>
                         <a href="#">Accueil</a>
@@ -63,7 +64,7 @@
     <section class="hero">
         <div class="text">
             <h2>Servant fièrement</h2>
-            <h1>Des Délicieux repas tous les jours</h1>
+            <h1>De Délicieux repas tous les jours</h1>
             <p>Commandez un plat et Faite vous livrés chez vous</p>
             <div class="btns">
                 <a href="#" class="btn">Faire une commander?</a>
